src/test/ui/issues/issue-66923-show-error-for-correct-call.stderr
error[E0277]: a value of type `Vec<f64>` cannot be built from an iterator over elements of type `&f64`
  --> $DIR/issue-66923-show-error-for-correct-call.rs:8:24
   |
LL |     let x2: Vec<f64> = x1.into_iter().collect();
   |                        ^^^^^^^^^^^^^^ ------- required by a bound introduced by this call
   |                        |
   |                        value of type `Vec<f64>` cannot be built from `std::iter::Iterator<Item=&f64>`
   |
   = help: the trait `FromIterator<&f64>` is not implemented for `Vec<f64>`
   = help: the trait `FromIterator<T>` is implemented for `Vec<T>`
note: the method call chain might not have had the expected associated types
  --> $DIR/issue-66923-show-error-for-correct-call.rs:8:27
   |
LL |     let x2: Vec<f64> = x1.into_iter().collect();
   |                        -- ^^^^^^^^^^^ associated type `std::iter::Iterator::Item` is `&f64` here
   |                        |
   |                        this expression has type `&[f64]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Iterator::collect`

error[E0277]: a value of type `Vec<f64>` cannot be built from an iterator over elements of type `&f64`
  --> $DIR/issue-66923-show-error-for-correct-call.rs:12:14
   |
LL |     let x3 = x1.into_iter().collect::<Vec<f64>>();
   |              ^^^^^^^^^^^^^^ ------- required by a bound introduced by this call
   |              |
   |              value of type `Vec<f64>` cannot be built from `std::iter::Iterator<Item=&f64>`
   |
   = help: the trait `FromIterator<&f64>` is not implemented for `Vec<f64>`
   = help: the trait `FromIterator<T>` is implemented for `Vec<T>`
note: the method call chain might not have had the expected associated types
  --> $DIR/issue-66923-show-error-for-correct-call.rs:12:17
   |
LL |     let x3 = x1.into_iter().collect::<Vec<f64>>();
   |              -- ^^^^^^^^^^^ associated type `std::iter::Iterator::Item` is `&f64` here
   |              |
   |              this expression has type `&[f64]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Iterator::collect`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
